--- a/CSS-PROJECTS/portfolio-site/portfolio.html
+++ b/CSS-PROJECTS/portfolio-site/portfolio.html
@@ -57,7 +57,7 @@
             </div>
 
         </div>
-        <div class="project-section">
+        <div class="project-section" id="projects">
             <div class="project-header">Projects</div>
             <div class="project-container">
                 <div class="project-card "id="project1">
@@ -242,6 +242,79 @@
                 <img src="./images/stack/K8s.svg" alt="" class="skills-logo" />
             </div>
         </div>
+
+        <div class="contact-section" id="contactme">
+            <div class="container">
+
+                <h1 class="contact-us-heading">Contact me</h1>
+
+                <h3 class="contact-us-sub-heading">
+                    Questions, thoughts, or just want to say hello?
+                </h3>
+
+                <div class="contact-section">
+                    <form class="form">
+                        <div class="formfield-container">
+                            <input class="formfield" 
+                            type="text" 
+                            name="name" 
+                            id="" 
+                            placeholder="Enter your name" />
+
+                            <input class="formfield" 
+                            type="email" 
+                            name="email" 
+                            id="" 
+                            placeholder="Enter your email address" />
+
+                            <input class="formfield" 
+                            type="text" 
+                            name="subject" 
+                            id="" 
+                            placeholder="Enter your subject" />
+
+                            <textarea name="message" 
+                            id="" cols="30" rows="10" 
+                            class="formfield formfield-textarea"
+                            placeholder="Enter your message"></textarea>
+                        </div>
+                        <div>
+                            <button type="submit" class="btn-pink" id="submit-btn">
+                              Send Message<i class="submit-icon fa-solid fa-paper-plane"></i>
+                            </button>
+                          </div>
+                    </form>
+                </div>
+
+            </div>
+        </div>
+
+        <footer>
+            <div class="container">
+                <div class="footer-wrapper">
+                    <div class="footer-faded-text">Bidesh Saha</div>
+                    <div class="footer-links">
+                          <div>
+                            <a href="#projects">Projects</a>
+                          </div>
+                          <div>
+                            <a href="#skills">Skills</a>
+                          </div>
+                          <div>
+                            <a href="#contactme">Contact Me</a>
+                          </div>
+                    </div>
+                    <div class="footer-icons">
+                        <i class="fa-brands fa-linkedin icon"></i>
+                        <i class="fa-brands fa-github icon"></i>
+                        <i class="fa-brands fa-twitter icon"></i>
+                        <i class="fa-brands fa-instagram icon"></i>
+                        <i class="fa-regular fa-envelope icon"></i>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
