--- a/CSS-PROJECTS/portfolio-site/portfolio.html
+++ b/CSS-PROJECTS/portfolio-site/portfolio.html
@@ -12,8 +12,8 @@
             <div class="navbar">
                 <div class="logo-container">
 
-                 <img src="./images/userAsset/NavLogo.jpg" class="logo">
-                 <div class="logo-text">ohn Doe</div> 
+                 <!-- <img src="./images/userAsset/NavLogo.jpg" class="logo"> -->
+                 <div class="logo-text">Bidesh Saha</div> 
                 </div>
                 <div class="nav-items">
                     <div><a href="#projects">Projects</a></div>
@@ -24,7 +24,7 @@
             <div class="hero-section">
                 <div class="faded-text">Bidesh Saha</div>
                 <div class="hero-section-left">
-                    <div class="hero-section-heading">Hi! John Doe</div>
+                    <div class="hero-section-heading">Hi! Bidesh Saha</div>
                     <div class="hero-section-heading hero-section-sub-heading">
                         I am a <span class="role"></span>
                     </div>
