--- a/JS_Project2/index.html
+++ b/JS_Project2/index.html
@@ -40,13 +40,13 @@
             </div>
         </div>
         <div class="icon-container">
-            <a href="#" class="icon" id="facebook">
+            <a href="https://www.facebook.com/bidesh.saha.14?mibextid=ZbWKwL" target="_blank" class="icon" id="facebook">
                 <i class="fa-brands fa-facebook-f"></i>
             </a>
-            <a href="#" class="icon" id="twitter">
+            <a href="https://x.com/Bideshsaha7003?t=87RaduA5cB30biPt8C_UMQ&s=09" target="_blank" class="icon" id="twitter">
                 <i class="fa-brands fa-twitter"></i>
             </a>
-            <a href="#" class="icon" id="instagram">
+            <a href="https://www.instagram.com/sahabidesh523/" target="_blank" class="icon" id="instagram">
                 <i class="fa-brands fa-instagram"></i>
             </a>
             <a href="#" class="icon" id="whatsapp">
