--- a/CSS-PROJECTS/modern-chair/chair.html
+++ b/CSS-PROJECTS/modern-chair/chair.html
@@ -15,7 +15,7 @@
         <div class="section">
             <div class="info-wrap">
                 <P class="title-up">Modern Chair</P>
-                <h2>Telford Kursi</h2>
+                <h2>Kepler Brook Chair</h2>
                 <h4>254<span>530</span></h4>
                 <div class="section-fluid">
                     <input class="desc-btn" type="radio" id="desc-1" name="desc-btn" checked>
